--- a/package.json
+++ b/package.json
@@ -11,11 +11,15 @@
     "@babel/core": "^7.4.5",
     "@babel/preset-env": "^7.4.5",
     "@babel/preset-react": "^7.0.0",
+    "@babel/register": "^7.4.4",
+    "babel-cli": "^6.26.0",
     "babel-loader": "^8.0.6",
     "babel-plugin-styled-components": "^1.10.0",
     "css-loader": "^2.1.1",
+    "express": "^4.17.1",
     "html-loader": "^0.5.5",
     "html-webpack-plugin": "^3.2.0",
+    "ignore-styles": "^5.0.1",
     "style-loader": "^0.23.1",
     "ts-loader": "^6.0.1",
     "typescript": "^3.4.5",
@@ -25,6 +29,7 @@
   },
   "dependencies": {
     "@types/axios": "^0.14.0",
+    "@types/express": "^4.16.1",
     "@types/react": "^16.8.18",
     "@types/react-dom": "^16.8.4",
     "@types/react-router": "^5.0.1",
