--- a/package.json
+++ b/package.json
@@ -2,44 +2,30 @@
   "name": "ssr-from-scratch",
   "version": "1.0.0",
   "main": "index.js",
+  "repository": "https://github.com/bengquist/ssr-from-scratch.git",
+  "author": "bengquist <engquist_blake@yahoo.com>",
   "license": "MIT",
+  "dependencies": {
+    "@types/express": "^4.16.1",
+    "@types/react": "^16.8.18",
+    "@types/react-dom": "^16.8.4",
+    "express": "^4.17.1",
+    "react": "^16.8.6",
+    "react-dom": "^16.8.6"
+  },
   "scripts": {
-    "start": "webpack-dev-server --open --mode development",
-    "build": "webpack --mode production"
+    "dev:build:server": "webpack --config webpack.server.js --mode production"
   },
   "devDependencies": {
     "@babel/core": "^7.4.5",
     "@babel/preset-env": "^7.4.5",
     "@babel/preset-react": "^7.0.0",
     "@babel/register": "^7.4.4",
-    "babel-cli": "^6.26.0",
+    "awesome-typescript-loader": "^5.2.1",
     "babel-loader": "^8.0.6",
-    "babel-plugin-styled-components": "^1.10.0",
-    "css-loader": "^2.1.1",
-    "express": "^4.17.1",
-    "html-loader": "^0.5.5",
-    "html-webpack-plugin": "^3.2.0",
+    "babel-preset-react": "^6.24.1",
     "ignore-styles": "^5.0.1",
-    "style-loader": "^0.23.1",
-    "ts-loader": "^6.0.1",
-    "typescript": "^3.4.5",
-    "webpack": "^4.32.2",
-    "webpack-cli": "^3.3.2",
-    "webpack-dev-server": "^3.4.1"
-  },
-  "dependencies": {
-    "@types/axios": "^0.14.0",
-    "@types/express": "^4.16.1",
-    "@types/react": "^16.8.18",
-    "@types/react-dom": "^16.8.4",
-    "@types/react-router": "^5.0.1",
-    "@types/react-router-dom": "^4.3.3",
-    "@types/styled-components": "^4.1.15",
-    "axios": "^0.18.0",
-    "react": "^16.8.6",
-    "react-dom": "^16.8.6",
-    "react-router": "^5.0.0",
-    "react-router-dom": "^5.0.0",
-    "styled-components": "^4.2.0"
+    "source-map-loader": "^0.2.4",
+    "typescript": "^3.4.5"
   }
 }
