--- a/package.json
+++ b/package.json
@@ -6,15 +6,37 @@
   "author": "bengquist <engquist_blake@yahoo.com>",
   "license": "MIT",
   "dependencies": {
+    "@types/axios": "^0.14.0",
     "@types/express": "^4.16.1",
+    "@types/node": "^12.0.2",
     "@types/react": "^16.8.18",
     "@types/react-dom": "^16.8.4",
+    "@types/react-redux": "^7.0.9",
+    "@types/react-router": "^5.0.1",
+    "@types/react-router-dom": "^4.3.3",
+    "@types/redux": "^3.6.0",
+    "@types/redux-thunk": "^2.1.0",
+    "axios": "^0.18.0",
     "express": "^4.17.1",
+    "nodemon": "^1.19.1",
+    "npm-run-all": "^4.1.5",
     "react": "^16.8.6",
-    "react-dom": "^16.8.6"
+    "react-dom": "^16.8.6",
+    "react-redux": "^7.0.3",
+    "react-router": "^5.0.0",
+    "react-router-dom": "^5.0.0",
+    "redux": "^4.0.1",
+    "redux-thunk": "^2.3.0",
+    "webpack": "^4.32.2",
+    "webpack-cli": "^3.3.2",
+    "webpack-merge": "^4.2.1",
+    "webpack-node-externals": "^1.7.2"
   },
   "scripts": {
-    "dev:build:server": "webpack --config webpack.server.js --mode production"
+    "dev": "npm-run-all --parallel dev:*",
+    "dev:server": "nodemon --watch build --exec \"node build/bundle.js\"",
+    "dev:build-server": "webpack --config webpack.server.js --mode production --watch",
+    "dev:build-client": "webpack --config webpack.client.js --mode production --watch"
   },
   "devDependencies": {
     "@babel/core": "^7.4.5",
@@ -25,6 +47,7 @@
     "babel-preset-react": "^6.24.1",
     "ignore-styles": "^5.0.1",
     "source-map-loader": "^0.2.4",
+    "ts-loader": "^6.0.1",
     "typescript": "^3.4.5"
   }
 }
