--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@types/react-dom": "^16.8.4",
     "@types/react-redux": "^7.0.9",
     "@types/react-router": "^5.0.1",
+    "@types/react-router-config": "^1.1.3",
     "@types/react-router-dom": "^4.3.3",
     "@types/redux": "^3.6.0",
     "@types/redux-thunk": "^2.1.0",
@@ -24,6 +25,7 @@
     "react-dom": "^16.8.6",
     "react-redux": "^7.0.3",
     "react-router": "^5.0.0",
+    "react-router-config": "^5.0.0",
     "react-router-dom": "^5.0.0",
     "redux": "^4.0.1",
     "redux-thunk": "^2.3.0",
