--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@types/react-router-dom": "^4.3.3",
     "@types/redux": "^3.6.0",
     "@types/redux-thunk": "^2.1.0",
+    "@types/serialize-javascript": "^1.5.0",
     "axios": "^0.18.0",
     "express": "^4.17.1",
     "nodemon": "^1.19.1",
@@ -29,6 +30,7 @@
     "react-router-dom": "^5.0.0",
     "redux": "^4.0.1",
     "redux-thunk": "^2.3.0",
+    "serialize-javascript": "^1.7.0",
     "webpack": "^4.32.2",
     "webpack-cli": "^3.3.2",
     "webpack-merge": "^4.2.1",
