--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
   "dependencies": {
     "@types/axios": "^0.14.0",
     "@types/express": "^4.16.1",
+    "@types/express-http-proxy": "^1.5.9",
     "@types/node": "^12.0.2",
     "@types/react": "^16.8.18",
     "@types/react-dom": "^16.8.4",
@@ -20,6 +21,7 @@
     "@types/serialize-javascript": "^1.5.0",
     "axios": "^0.18.0",
     "express": "^4.17.1",
+    "express-http-proxy": "^1.5.1",
     "nodemon": "^1.19.1",
     "npm-run-all": "^4.1.5",
     "react": "^16.8.6",
